@@ -81,7 +81,7 @@
 		<javac srcdir="${src.test.local}" 
 			destdir="${build.test}" 
 			target="${target.jdk}" 
-			debug="on" >
+			debug="on" encoding="${build.encoding}">
 			<classpath refid="classpath" />
 		</javac>
 	</target>
