@@ -105,6 +105,9 @@ BUGFIXES:
 
   ZOOKEEPER-2178 Native client fails compilation on Windows. (Chris Nauroth via michim)
 
+  ZOOKEEPER-2197 non-ascii character in FinalRequestProcessor.java
+  (Michi Mutsuzaki via rgs)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)
 
